--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "prettier": "^1.11.1"
   },
   "dependencies": {
-    "chalk": "^2.3.2",
-    "got": "^10.6.0"
+    "chalk": "^2.3.2"
   },
   "description": "Implement your [BPMN Service Task](https://docs.camunda.org/manual/latest/user-guide/process-engine/external-tasks/) in NodeJS.",
   "bugs": {
